--- a/notebooks/_MSE672_Intro_TEM.ipynb
+++ b/notebooks/_MSE672_Intro_TEM.ipynb
@@ -23,7 +23,11 @@
     "* Beginner\n",
     "    * Please start at the beginning and advance in the order of the notebooks given here.\n",
     "* Advanced, Inpatient or both:\n",
-    "    * Go to the pyTEMlib notebooks(and give feedback if links are missing, please).\n"
+    "    * Go to the pyTEMlib notebooks (and give feedback if links are missing, please).\n",
+    "\n",
+    "\n",
+    "You can [download all files](https://github.com/gduscher/MSE672-Introduction-to-TEM/archive/main.zip)\n",
+    "from github as a zip file."
    ]
   },
   {
@@ -40,8 +44,11 @@
     "    * [Matplotlib and Numpy for Micrographs](CH1_03-Data_Representation.ipynb)\n",
     "    * [Open a (DM) file ](CH1_04-pyNSID.ipynb)\n",
     "    * *Course*\n",
-    "    * [Overview](CH1_05-Overview.ipynb)\n",
-    "    * [Electron-Optics](CH1_06-Electron-Optics.ipynb)\n",
+    "    * [Overview](CH1_05-Overview.ipynb)[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
+    "    https://raw.githubusercontent.com/gduscher/MSE672-Introduction-to-TEM/blob/main/notebooks/CH1_06-Electron-Optics.ipynb)\n",
+    "\n",
+    "    * [Electron-Optics](CH1_06-Electron-Optics.ipynb) [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
+    "    https://raw.githubusercontent.com/gduscher/MSE672-Introduction-to-TEM/blob/main/notebooks/CH1_06-Electron-Optics.ipynb)\n",
     "\n",
     "---\n",
     "   \n",
