--- a/notebooks/CH1_06-Electron-Optics.ipynb
+++ b/notebooks/CH1_06-Electron-Optics.ipynb
@@ -12,6 +12,8 @@
     "\n",
     "\n",
     "# Electron Optics\n",
+    " [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
+    "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main/notebooks/CH1_06-Electron-Optics.ipynb)\n",
     "\n",
     "by \n",
     "\n",
@@ -20,6 +22,8 @@
     "Materials Science & Engineering<br>\n",
     "Joint Institute of Advanced Materials<br>\n",
     "The University of Tennessee, Knoxville\n",
+    "\n",
+    "\n",
     "\n",
     "## Import packages for figures and \n",
     "### Check Installed Packages"
@@ -52,7 +56,7 @@
     "\n",
     "# Colab setup ------------------\n",
     "if 'google.colab' in sys.modules:\n",
-    "    !pip install git+https://github.com/pycroscopy/pyTEMlib/ -q\n",
+    "    !pip install pyTEMlib -q\n",
     "\n",
     "# pyTEMlib setup ------------------\n",
     "else:\n",
@@ -148,7 +152,7 @@
    "source": [
     "The big buttons on upper left, we saw already in the last notebook.\n",
     "\n",
-    "You select the diff\u000b",
+    "You select the diff\u000B",
     "erent modes of the TEM with those."
    ]
   },
@@ -184,8 +188,8 @@
     "\n",
     "##The Intermediate Lens\n",
     "The Intermediate lens system switches between imaging and\n",
-    "di\u000b",
-    "raction mode. The objective lens does not magnify anything in diff\u000b",
+    "di\u000B",
+    "raction mode. The objective lens does not magnify anything in diff\u000B",
     "raction mode, because the back focal plane of the objective lens is object plane of the intermediate plane. The intermediate lens does the maximum magni\f",
     "cation.\n",
     "\n",
@@ -205,7 +209,7 @@
     "### Electron Optics - Condenser\n",
     "\n",
     "The electron optics starts at the cross over which the gun produces in the\n",
-    "diff\u000b",
+    "diff\u000B",
     "erential pumping aperture.\n",
     "Then we have a condenser lens system with three lenses, three pairs of deflectors, a pair of stigmators and an aperture. \n",
     "\n",
@@ -224,12 +228,12 @@
     "lter into two parts. \n",
     "\n",
     "The fi\f",
-    "rst part switches from imaging to diff\u000b",
+    "rst part switches from imaging to diff\u000B",
     "raction and does all the magni\f",
     "cation. This part has three\n",
     "lenses, two pairs of deflectors, a stigmator, and an aperture. \n",
     "\n",
-    "The second part switches from spectroscopy to imaging or di\u000b",
+    "The second part switches from spectroscopy to imaging or di\u000B",
     "ffraction and does only magni\f",
     "cation in spectroscopy mode. This part has three lenses, two pairs\n",
     "of deflectors, a stigmator, and an aperture."
