--- a/notebooks/CH1_05-Overview.ipynb
+++ b/notebooks/CH1_05-Overview.ipynb
@@ -52,8 +52,7 @@
     "\n",
     "# Colab setup ------------------\n",
     "if 'google.colab' in sys.modules:\n",
-    "    !pip install git+https://github.com/pycroscopy/pyTEMlib/ -q\n",
-    "\n",
+    "    !pip install pyTEMlib -q\n",
     "# pyTEMlib setup ------------------\n",
     "else:\n",
     "    if test_package('pyTEMlib') < '0.2021.1.9':\n",
@@ -104,7 +103,7 @@
     "|       |    |    |\n",
     "| :------------- | :----------: | -----------: |\n",
     "| 1925 | Louis de Broglie | electron has a wavelike character with a wavelength less than light|\n",
-    "|1927 | Davisson and Germer | classic electron di\u000b",
+    "|1927 | Davisson and Germer | classic electron di\u000B",
     "ffraction experiments|\n",
     "| | Thompson and Reed||\n",
     "|1932 |Knoll and Ruska| fi\f",
@@ -173,7 +172,7 @@
     "id": "bX5zOk-tYdNY"
    },
    "source": [
-    "## Diff\u000b",
+    "## Diff\u000B",
     "raction and Imaging\n",
     "\n",
     "**No interaction**\n",
@@ -182,13 +181,13 @@
     "\n",
     "**Interaction without energy transfer**\n",
     "\n",
-    "Elastic scattering is the basis for di\u000b",
+    "Elastic scattering is the basis for di\u000B",
     "raction and imaging.\n",
     "\n",
     "**Interaction with energy transfer**\n",
     "\n",
-    "Inelastic scattering causes a diff\u000b",
-    "use background in images and diff\u000b",
+    "Inelastic scattering causes a diff\u000B",
+    "use background in images and diff\u000B",
     "raction\n",
     "pattern, but can be used for analytical TEM."
    ]
@@ -205,13 +204,13 @@
     "\n",
     "|  |  |\n",
     "|:----:|:---------|\n",
-    "|SAED |selected area electron di\u000b",
+    "|SAED |selected area electron di\u000B",
     "ffraction|\n",
-    "|CBED| convergent beam electron di\u000b",
+    "|CBED| convergent beam electron di\u000B",
     "ffraction|\n",
-    "|Kikuchi |Kikuchi di\u000b",
+    "|Kikuchi |Kikuchi di\u000B",
     "ffraction|\n",
-    "|Fresnel |Fresnel di\u000b",
+    "|Fresnel |Fresnel di\u000B",
     "ffraction|\n",
     "|CTEM |conventional transmission electron microscopy|\n",
     "|BF |bright fi\f",
@@ -239,22 +238,22 @@
     "|Nanoprobe |Spot| Spot| Image| ESI|\n",
     "|LowMag |imaging |TEM Mag| LowMag| ESI|\n",
     "|Microprobe| Spot| LowMag| Image| ESI|\n",
-    "|SAED| TEM| Mag| Di\u000b",
+    "|SAED| TEM| Mag| Di\u000B",
     "ffr| ESI|\n",
-    "|Low angle diff\u000b",
-    "raction |TEM |LowMag| Diff\u000b",
+    "|Low angle diff\u000B",
+    "raction |TEM |LowMag| Diff\u000B",
     "r| ESI|\n",
-    "|CBED |Spot |Mag |Di\u000b",
+    "|CBED |Spot |Mag |Di\u000B",
     "r| ESI|\n",
-    "|LACBED |Spot| LowMag| Diff\u000b",
+    "|LACBED |Spot| LowMag| Diff\u000B",
     "r| EELS|\n",
     "|Spectroscopy |TEM |Mag |Image| EELS|\n",
-    "|Spectroscopy |Spot| Mag |Di\u000b",
+    "|Spectroscopy |Spot| Mag |Di\u000B",
     "r| EELS|\n",
     "|STEM |Spot |Mag |Image| ESI|\n",
-    "|STEM-LM |Spot |LowMag| Di\u000b",
+    "|STEM-LM |Spot |LowMag| Di\u000B",
     "r| ESI|\n",
-    "|STEM-SI| Spot| Mag| Di\u000b",
+    "|STEM-SI| Spot| Mag| Di\u000B",
     "ffr| EELS|\n"
    ]
   },
@@ -1276,10 +1275,10 @@
    },
    "source": [
     "## Basics of Diffraction\n",
-    "- Di\u000b",
+    "- Di\u000B",
     "ffraction is the direct result of the interaction (without energy\n",
     "transfer) of electrons and matter.\n",
-    "- Kinematic diff\u000b",
+    "- Kinematic diff\u000B",
     "raction theory describes only the Bragg angles (the\n",
     "position) but not the intensity in a real electron diffraction pattern.\n",
     "- Dynamic theory is responsible for the intensity distribution in a electron diffraction pattern"
@@ -1384,7 +1383,7 @@
     "resolved) techniques\n",
     "\n",
     "### Outlook\n",
-    "- The interpretation of selective area di\u000b",
+    "- The interpretation of selective area di\u000B",
     "raction.\n",
     "- Next: Geometric Ray Optics.\n",
     "\n",
