--- a/notebooks/CH1_05-Overview.ipynb
+++ b/notebooks/CH1_05-Overview.ipynb
@@ -45,7 +45,7 @@
     "def test_package(package_name):\n",
     "    \"\"\"Test if package exists and returns version or -1\"\"\"\n",
     "    try:\n",
-    "        version = (get_distribution(package_name).version)\n",
+    "        version = get_distribution(package_name).version\n",
     "    except (DistributionNotFound, ImportError) as err:\n",
     "        version = '-1'\n",
     "    return version\n",
@@ -103,26 +103,15 @@
     "|       |    |    |\n",
     "| :------------- | :----------: | -----------: |\n",
     "| 1925 | Louis de Broglie | electron has a wavelike character with a wavelength less than light|\n",
-    "|1927 | Davisson and Germer | classic electron di\u000B",
-    "ffraction experiments|\n",
+    "|1927 | Davisson and Germer | classic electron diffraction experiments|\n",
     "| | Thompson and Reed||\n",
-    "|1932 |Knoll and Ruska| fi\f",
-    "rst electron lenses and fi\f",
-    "rst image (Noble Price 1986)|\n",
-    "|1936 |Vickers| fi\f",
-    "rst commercial electron TEM|\n",
-    "|1939 |Siemens and Halske| fi\f",
-    "rst usable and pro\f",
-    "table TEM|\n",
-    "|1949 |Heidenreich| fi\f",
-    "rst transparent metal foil (\f",
-    "first materials science result)|\n",
-    "|2000 |Krivanek |(STEM) fi\f",
-    "rst prototypes for spherical aberration|\n",
+    "|1932 |Knoll and Ruska| first electron lenses and first image (Noble Price 1986)|\n",
+    "|1936 |Vickers| first commercial electron TEM|\n",
+    "|1939 |Siemens and Halske| first usable and profitable TEM|\n",
+    "|1949 |Heidenreich| first transparent metal foil (first materials science result)|\n",
+    "|2000 |Krivanek |(STEM) first prototypes for spherical aberration|\n",
     "||Rose/Heider| (TEM) objective-lens correctors|\n",
-    "|2007 |Krivanek |(STEM) \f",
-    "first prototypes for \f",
-    "fifth order|\n",
+    "|2007 |Krivanek |(STEM) first prototypes for fifth order|\n",
     "| | Rose/Heider| (TEM) aberration objective-lens correctors|\n"
    ]
   },
@@ -134,14 +123,14 @@
    "source": [
     "## Available TEMs\n",
     "TEMs are now available from many sources ( for example: FEI, Hitachi,\n",
-    "JEOL, NION). \n",
+    "JEOL, Nion).\n",
     "## TEMs available in the UTK/ORNL area.\n",
     "- Zeiss Libra200 MC at UTK\n",
-    "- Nion UtlraSTEM 100 at ORNL/CNMS, 5th order corrected\n",
+    "- Nion UltraSTEM 100 at ORNL/CNMS, 5th order corrected\n",
     "- JEOL 2100 at ORNL 3rd order corrected\n",
     "- FEI Titan at ORNL/CNMS, 3rd order corrected\n",
     "- JEOL ARM at ORNL/CNMS, 5th order corrected\n",
-    "- Nion UtlraSTEM 200 at ORNL, 5th order corrected\n",
+    "- Nion UltraSTEM 200 at ORNL, 5th order corrected\n",
     "- NionMACSTEM 100 at ORNL, 5th order corrected\n",
     "- FEI Talos F200X S/TEM at 300 kV at ORNL,\n",
     "- Hitachi 300 at ORNL\n",
@@ -172,8 +161,7 @@
     "id": "bX5zOk-tYdNY"
    },
    "source": [
-    "## Diff\u000B",
-    "raction and Imaging\n",
+    "## Diffraction and Imaging\n",
     "\n",
     "**No interaction**\n",
     "\n",
@@ -181,14 +169,11 @@
     "\n",
     "**Interaction without energy transfer**\n",
     "\n",
-    "Elastic scattering is the basis for di\u000B",
-    "raction and imaging.\n",
+    "Elastic scattering is the basis for diffraction and imaging.\n",
     "\n",
     "**Interaction with energy transfer**\n",
     "\n",
-    "Inelastic scattering causes a diff\u000B",
-    "use background in images and diff\u000B",
-    "raction\n",
+    "Inelastic scattering causes a diffuse background in images and diffraction\n",
     "pattern, but can be used for analytical TEM."
    ]
   },
@@ -204,25 +189,18 @@
     "\n",
     "|  |  |\n",
     "|:----:|:---------|\n",
-    "|SAED |selected area electron di\u000B",
-    "ffraction|\n",
-    "|CBED| convergent beam electron di\u000B",
-    "ffraction|\n",
-    "|Kikuchi |Kikuchi di\u000B",
-    "ffraction|\n",
-    "|Fresnel |Fresnel di\u000B",
-    "ffraction|\n",
+    "|SAED |selected area electron diffraction|\n",
+    "|CBED| convergent beam electron diffraction|\n",
+    "|Kikuchi |Kikuchi diffraction|\n",
+    "|Fresnel |Fresnel diffraction|\n",
     "|CTEM |conventional transmission electron microscopy|\n",
-    "|BF |bright fi\f",
-    "eld imaging|\n",
-    "|DF |dark fi\f",
-    "eld imaging|\n",
+    "|BF |bright field imaging|\n",
+    "|DF |dark field imaging|\n",
     "|HRTEM| high resolution (phase contrast) |transmission electron microscopy|\n",
     "|SE |secondary electron imaging|\n",
-    "|BE| backscattered electron imaging|\n",
+    "|BE| backscatter electron imaging|\n",
     "|Lorentz |Lorentz microscopy|\n",
-    "|HAADF |high angle annular dark \f",
-    "eld imaging (Z-contrast)|"
+    "|HAADF |high angle annular dark field imaging (Z-contrast)|"
    ]
   },
   {
@@ -238,23 +216,15 @@
     "|Nanoprobe |Spot| Spot| Image| ESI|\n",
     "|LowMag |imaging |TEM Mag| LowMag| ESI|\n",
     "|Microprobe| Spot| LowMag| Image| ESI|\n",
-    "|SAED| TEM| Mag| Di\u000B",
-    "ffr| ESI|\n",
-    "|Low angle diff\u000B",
-    "raction |TEM |LowMag| Diff\u000B",
-    "r| ESI|\n",
-    "|CBED |Spot |Mag |Di\u000B",
-    "r| ESI|\n",
-    "|LACBED |Spot| LowMag| Diff\u000B",
-    "r| EELS|\n",
+    "|SAED| TEM| Mag| Diffr| ESI|\n",
+    "|Low angle diffraction |TEM |LowMag| Diffr| ESI|\n",
+    "|CBED |Spot |Mag |Diffr| ESI|\n",
+    "|LACBED |Spot| LowMag| Diffr| EELS|\n",
     "|Spectroscopy |TEM |Mag |Image| EELS|\n",
-    "|Spectroscopy |Spot| Mag |Di\u000B",
-    "r| EELS|\n",
+    "|Spectroscopy |Spot| Mag |Diffr| EELS|\n",
     "|STEM |Spot |Mag |Image| ESI|\n",
-    "|STEM-LM |Spot |LowMag| Di\u000B",
-    "r| ESI|\n",
-    "|STEM-SI| Spot| Mag| Di\u000B",
-    "ffr| EELS|\n"
+    "|STEM-LM |Spot |LowMag| Diffr| ESI|\n",
+    "|STEM-SI| Spot| Mag| Diffr| EELS|\n"
    ]
   },
   {
@@ -270,7 +240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The main ingedients in an TEM method are how is the sample ``illuminated`` (condenser) and how are the electrons ``sorted`` and ``selected`` (projector and spectrometer)."
+    "The main ingredients in an TEM method are how is the sample ``illuminated`` (condenser) and how are the electrons ``sorted`` and ``selected`` (projector and spectrometer)."
    ]
   },
   {
@@ -278,7 +248,7 @@
    "metadata": {},
    "source": [
     "## Diffraction and Imaging\n",
-    "Even though we are dealing with relativistic and quantum mechanical principles the geometric ray diagrams are essentail for an understanding of how to set up a TEM mode."
+    "Even though we are dealing with relativistic and quantum mechanical principles the geometric ray diagrams are essential for an understanding of how to set up a TEM mode."
    ]
   },
   {
@@ -1275,13 +1245,11 @@
    },
    "source": [
     "## Basics of Diffraction\n",
-    "- Di\u000B",
-    "ffraction is the direct result of the interaction (without energy\n",
+    "- Diffraction is the direct result of the interaction (without energy\n",
     "transfer) of electrons and matter.\n",
-    "- Kinematic diff\u000B",
-    "raction theory describes only the Bragg angles (the\n",
+    "- Kinematic diffraction theory describes only the Bragg angles (the\n",
     "position) but not the intensity in a real electron diffraction pattern.\n",
-    "- Dynamic theory is responsible for the intensity distribution in a electron diffraction pattern"
+    "- Dynamic theory is responsible for the intensity distribution in an electron diffraction pattern"
    ]
   },
   {
@@ -1343,7 +1311,7 @@
     "## Secondary Processes\n",
     "After excitation through the incident electrons, the atoms will fall back to\n",
     "their ground state and emit the gained energies as photons (in the light\n",
-    "and X-ray region) or (Auger{) electrons. These secondary processes are\n",
+    "and X-ray region) or (Auger-) electrons. These secondary processes are\n",
     "also used for analytical analysis such as:\n",
     "- Energy Dispersive X-Ray Spectroscopy (EDS)\n",
     "- Auger-Spectroscopy\n",
@@ -1383,8 +1351,7 @@
     "resolved) techniques\n",
     "\n",
     "### Outlook\n",
-    "- The interpretation of selective area di\u000B",
-    "raction.\n",
+    "- The interpretation of selective area diffraction.\n",
     "- Next: Geometric Ray Optics.\n",
     "\n",
     "### Read your Assignment\n",
