--- a/notebooks/CH1_05-Overview.ipynb
+++ b/notebooks/CH1_05-Overview.ipynb
@@ -10,6 +10,12 @@
     "\n",
     "<hr style=\"height:1px;border-top:4px solid #FF8200\" />\n",
     "\n",
+    "# Overview Notebook\n",
+    "\n",
+    "part of\n",
+    "\n",
+    "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](_MSE672_Intro_TEM.ipynb)**</font>\n",
+    "\n",
     "by \n",
     "\n",
     "Gerd Duscher\n",
@@ -18,7 +24,6 @@
     "Joint Institute of Advanced Materials<br>\n",
     "The University of Tennessee, Knoxville\n",
     "\n",
-    "# Overview Notebook\n",
     "\n",
     "First we load the code to make figures from pyTEMlib\n",
     "## Import packages for figures and \n",
