--- a/notebooks/CH1_06-Electron-Optics.ipynb
+++ b/notebooks/CH1_06-Electron-Optics.ipynb
@@ -12,8 +12,13 @@
     "\n",
     "\n",
     "# Electron Optics\n",
+    "\n",
     " [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
     "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main/notebooks/CH1_06-Electron-Optics.ipynb)\n",
+    "\n",
+    "part of\n",
+    "\n",
+    "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](_MSE672_Intro_TEM.ipynb)**</font>\n",
     "\n",
     "by \n",
     "\n",
@@ -3294,8 +3299,28 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "GcfSxvtik6os"
+    "id": "GcfSxvtik6os",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
+   "source": [
+    "## Convergence Angle\n",
+    "\n",
+    "The condensor lens system defines the illumination of the sample and with it the convergence angle (even parallel illumination has ususally a convergence angle of a few $\\mu$rad).\n",
+    "\n",
+    "The convergence angle is set by the condenser lens system  and  can be measured with a convergent beam electron diffraction (CBED) pattern.\n",
+    "\n",
+    "\n",
+    "Under plane wave illumination the diffraction pattern consists of points. If you imagine a second incident plane wave\n",
+    "with some angle to the first one, there will be two slightly shifted diffraction patterns made out of points.\n",
+    "\n",
+    "\n",
+    "A lot of plane waves with a conical angle distribution will result in small circles instead of a point. The radius of the circle corresponds to the convergence angle. One can easily calculate the convergence angle from a CBED pattern of a known sample."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "## Summary Ray Optics of TEM\n",
     "- Lenses provide illumination and magnification\n",
@@ -3305,7 +3330,10 @@
     "\n",
     "A detailed understanding of the angles within the TEM allows for a\n",
     "project oriented experimental setup.\n"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
