--- a/notebooks/_MSE672_Intro_TEM.ipynb
+++ b/notebooks/_MSE672_Intro_TEM.ipynb
@@ -42,7 +42,8 @@
     "    * [Python as it is used here](CH1_01-Introduction_Python.ipynb)\n",
     "    * [Installation and Prerequesites](CH1_02-Prerequisites.ipynb)\n",
     "    * [Matplotlib and Numpy for Micrographs](CH1_03-Data_Representation.ipynb)\n",
-    "    * [Open a (DM) file ](CH1_04-pyNSID.ipynb)\n",
+    "    * [Open a (DM) file ](CH1_04-pyNSID.ipynb)-[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
+    "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main/notebooks/CH1_04-pyNSID.ipynb)\n",
     "    * *Course*\n",
     "    * [Overview](CH1_05-Overview.ipynb) [![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](\n",
     "    https://colab.research.google.com/github/gduscher/MSE672-Introduction-to-TEM/blob/main/notebooks/CH1_05-Overview.ipynb)\n",
