--- a/notebooks/TestNotebook.ipynb
+++ b/notebooks/TestNotebook.ipynb
@@ -110,6 +110,30 @@
     "plt.text(0,0, 'MSE 672',ha='center')\n",
     "plt.gca().set_aspect('equal')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Who would have thought that the formula of love is based on trignometry?"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
