--- a/notebooks/CH1_07-Course_Organization.ipynb
+++ b/notebooks/CH1_07-Course_Organization.ipynb
@@ -35,11 +35,12 @@
     "<h3 >Williams and Carter<br>\n",
     "    Transmission Electron Microscopy</h3>\n",
     "    Plenum Press, 2009 (2nd Edition).<br>\n",
-    "    available online at the Library\n",
+    "    available [online at the library](https://utk.primo.exlibrisgroup.com/discovery/fulldisplay?docid=cdi_askewsholts_vlebooks_9780387765013&context=PC&vid=01UTN_KNOXVILLE:01UTK&lang=en&search_scope=MyInst_and_CI&adaptor=Primo%20Central&tab=Everything&query=any%2Ccontains%2C%20Transmission%20Electron%20Microscopy&facet=rtype%2Cexclude%2Creviews&facet=rtype%2Cexclude%2Creference_entrys)\n",
+    "\n",
     "<h3 >Reimer and Kohl<br>\n",
     "    Transmission Electron Microscopy</h3>\n",
     "    Springer, Berlin, 2007 (5th Edition).<br>\n",
-    "    available online at the Library\n",
+    "    available [online at the library](https://utk.primo.exlibrisgroup.com/discovery/fulldisplay?docid=cdi_proquest_ebookcentral_EBC6362086&context=PC&vid=01UTN_KNOXVILLE:01UTK&lang=en&search_scope=MyInst_and_CI&adaptor=Primo%20Central&tab=Everything&query=any%2Ccontains%2CReimer%20and%20Kohl&offset=0)\n",
     "\n",
     "<h3 >Zuo and Spence<br>\n",
     "    Advanced Transmission Electron Microscopy: Imaging and Diffraction</h3>\n",
@@ -54,7 +55,7 @@
     "<h3>R.F. Egerton<br>\n",
     "    Electron Energy{Loss Spectroscopy in the Electron Microscope.</h3>\n",
     "    Plenum Press, 2011 (3rd Edition)<br>\n",
-    "    available online at the Library<\n"
+    "    available [online at the Library](\n"
    ],
    "metadata": {
     "collapsed": false,
