--- a/Introduction/TestNotebook.ipynb
+++ b/Introduction/TestNotebook.ipynb
@@ -115,7 +115,7 @@
     }
    },
    "source": [
-    "Who would have thought that the formula of love is based on trignometry?"
+    "Who would have thought that the formula of love is based on trigonometry?"
    ]
   },
   {
