--- a/Introduction/CH1_02-Prerequisites.ipynb
+++ b/Introduction/CH1_02-Prerequisites.ipynb
@@ -283,33 +283,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Known nbextensions:\n",
+      "  config dir: C:\\Users\\gduscher\\.jupyter\\nbconfig\n",
+      "    notebook section\n",
+      "      mayavi/x3d/x3dom enabled \n",
+      "      jupyter-js-widgets/extension enabled \n",
+      "      jupyter-widget-chemview/extension enabled \n",
+      "      fileupload/extension enabled \n",
+      "      hide_code/hide_code enabled \n",
+      "      calysto/document-tools/main enabled \n",
+      "      nbextensions_configurator/config_menu/main enabled \n",
+      "      toc2 enabled \n",
+      "      contrib_nbextensions_help_item/main enabled \n",
+      "      toc2/main enabled \n",
+      "      varInspector/main disabled\n",
+      "      vispy/extension enabled \n",
+      "      equation-numbering/main enabled \n",
+      "    tree section\n",
+      "      nbextensions_configurator/tree_tab/main enabled \n",
+      "  config dir: C:\\Users\\gduscher\\Anaconda3\\etc\\jupyter\\nbconfig\n",
+      "    notebook section\n",
+      "      jupyter-matplotlib/extension enabled \n",
+      "      jupyter-js-widgets/extension enabled "
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "      - Validating: ok\n",
+      "      - Validating: ok\n",
+      "      - Validating: problems found:\n",
+      "        - require?  X jupyter-widget-chemview/extension\n",
+      "      - Validating: problems found:\n",
+      "        - require?  X fileupload/extension\n",
+      "      - Validating: problems found:\n",
+      "        - require?  X hide_code/hide_code\n",
+      "      - Validating: problems found:\n",
+      "        - require?  X calysto/document-tools/main\n",
+      "      - Validating: problems found:\n",
+      "        - require?  X nbextensions_configurator/config_menu/main\n",
+      "      - Validating: problems found:\n",
+      "        - require?  X toc2\n",
+      "      - Validating: ok\n",
+      "      - Validating: ok\n",
+      "      - Validating: problems found:\n",
+      "        - require?  X vispy/extension\n",
+      "      - Validating: ok\n",
+      "      - Validating: problems found:\n",
+      "        - require?  X nbextensions_configurator/tree_tab/main\n",
+      "      - Validating: ok\n",
+      "      - Validating: ok\n",
+      "      - Validating: problems found:\n",
+      "        - require?  X nbextensions_configurator/config_menu/main\n",
+      "      - Validating: ok\n",
+      "      - Validating: problems found:\n",
+      "        - require?  X nbextensions_configurator/tree_tab/main\n",
+      "      - Validating: problems found:\n",
+      "        - require?  X nbextensions_configurator/config_menu/main\n",
+      "      - Validating: ok\n",
+      "      - Validating: problems found:\n",
+      "        - require?  X nbextensions_configurator/tree_tab/main\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "      nbextensions_configurator/config_menu/main enabled \n",
+      "      contrib_nbextensions_help_item/main enabled \n",
+      "    tree section\n",
+      "      nbextensions_configurator/tree_tab/main enabled \n",
+      "  config dir: C:\\ProgramData\\jupyter\\nbconfig\n",
+      "    notebook section\n",
+      "      nbextensions_configurator/config_menu/main enabled \n",
+      "      contrib_nbextensions_help_item/main enabled \n",
+      "    tree section\n",
+      "      nbextensions_configurator/tree_tab/main enabled \n"
+     ]
+    }
+   ],
    "source": [
     "# Install a pip package in the current Jupyter kernel\n",
     "import sys\n",
-    "\n",
     "!{sys.executable} -m jupyter nbextension list"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "!{sys.executable} -m pip install jupyter_contrib_nbextensions"
+    "Use one of the following (uncomment pip and comment out the conda comand line, if you are not in an anaconda envoironment)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "#!{sys.executable} -m pip install jupyter_contrib_nbextensions\n",
+    "!conda install --yes --prefix {sys.prefix} jupyter_contrib_nbextensions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Enabling notebook extension toc2...\n",
+      "      - Validating: problems found:\n",
+      "        - require?  X toc2\n"
+     ]
+    }
+   ],
    "source": [
+    "\n",
     "!{sys.executable} -m  jupyter nbextension enable toc2"
    ]
   },
