--- a/Diffraction/Ch2_00-Diffraction.ipynb
+++ b/Diffraction/Ch2_00-Diffraction.ipynb
@@ -33,21 +33,20 @@
     "The diffraction chapter has the following sections:\n",
     "## Content\n",
     "The Diffraction chapter has the following sections:\n",
-    "* [The Electron](CH2-Electron.ipynb)\n",
-    "* [Atomic Form Factor](Ch2-Atomic_Form_Factor.ipynb)\n",
-    "* [Basic Crystallography](Ch2-Basic_Crystallography.ipynb)\n",
-    "    * [Plot Unit Cell with Other Packages](Plot_UnitCell.ipynb)\n",
-    "    * [Fourier Transform Laboratory](FourierTransformLaboratory.ipynb)\n",
-    "* [Structure Factors](CH2-Structure_Factors.ipynb)\n",
-    "* [Analyzing Ring Diffraction Pattern](CH2-Diffraction-Rings.ipynb)\n",
-    "* [Kinematic Scattering Geometry](CH2-Kinematic_Scattering_Geometry.ipynb)\n",
-    "    * [Relrod - Sample Geometry and Excitation Error](CH2-Relrod.ipynb)\n",
-    "* [Plotting of Diffraction Pattern](CH2-Plotting_Diffraction_Pattern.ipynb)\n",
-    "* [Analyzing Spot Diffraction Pattern](CH2-Spot_Diffraction_Pattern.ipynb)\n",
-    "* [Kikuchi Lines](CH2-Kikuchi_Lines.ipynb)\n",
-    "* [HOLZ Lines](HOLZ_Lines.ipynb)\n",
-    "* [Lattice Determination with HOLZ](HOLZ_Example.ipynb) \n",
-    "* [Kinematic Diffraction with KinsCat](Kinematic_Diffraction_with_KinsCat.ipynb)\n",
+    "* [The Electron](CH2_01-Electron.ipynb)\n",
+    "* [Atomic Form Factor](Ch2_02-Atomic_Form_Factor.ipynb)\n",
+    "* [Basic Crystallography](Ch2_03-Basic_Crystallography.ipynb)\n",
+    "    * [Fourier Transform Laboratory](Ch2_03b-FourierTransformLaboratory.ipynb)\n",
+    "* [Structure Factors](CH2_04-Structure_Factors.ipynb)\n",
+    "* [Analyzing Ring Diffraction Pattern](CH2_05-Diffraction-Rings.ipynb)\n",
+    "* [Kinematic Scattering Geometry](CH2_06-Kinematic_Scattering_Geometry.ipynb)\n",
+    "    * [Relrod - Sample Geometry and Excitation Error](CH2_07-Relrod.ipynb)\n",
+    "* [Plotting of Diffraction Pattern](CH2_08-Plotting_Diffraction_Pattern.ipynb)\n",
+    "* [Analyzing Spot Diffraction Pattern](CH2_09-Spot_Diffraction_Pattern.ipynb)\n",
+    "* [Kikuchi Lines](CH2_10-Kikuchi_Lines.ipynb)\n",
+    "* [HOLZ Lines](CH2_11-HOLZ_Lines.ipynb)\n",
+    "* [Lattice Determination with HOLZ](CH2_12-HOLZ_Example.ipynb) \n",
+    "* [Kinematic Diffraction with KinsCat](CH2_13Kinematic_Diffraction_with_KinsCat.ipynb)\n",
     "\n",
     "# Introduction\n",
     "\n",
