--- a/docs/Diffraction/CH2-Introduction.ipynb
+++ b/docs/Diffraction/CH2-Introduction.ipynb
@@ -4,83 +4,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font size = \"5\"> **Chapter 2: [Diffraction](Ch2_00-Diffraction.ipynb)** </font>\n",
+    "<font size = \"5\"> **Chapter 2: [Diffraction](Ch2-Diffraction.ipynb)** </font>\n",
     "\n",
     "\n",
     "<hr style=\"height:1px;border-top:4px solid #FF8200\" />\n",
     "\n",
-    "#  Chapter 2:  Diffraction\n",
+    "\n",
+    "\n",
+    "# Introduction \n",
     "\n",
     "part of \n",
     "\n",
-    "<font size = \"5\"> **[MSE672:  Introduction to Transmission Electron Microscopy](_MSE672_Intro_TEM.ipynb)**</font>\n",
+    "\n",
+    "<font size = \"5\"> **[Analysis of Transmission Electron Microscope Data](_Analysis_of_Transmission_Electron_Microscope_Data.ipynb)**</font>\n",
     "\n",
     "\n",
-    "by Gerd Duscher, Spring 2021\n",
+    "by Gerd Duscher, 2019\n",
     "\n",
     "Microscopy Facilities<br>\n",
     "Joint Institute of Advanced Materials<br>\n",
-    "Materials Science & Engineering<br>\n",
     "The University of Tennessee, Knoxville\n",
     "\n",
-    "Background and methods to analysis and quantification of data acquired with transmission electron microscopes."
+    "Model based analysis and quantification of data acquired with transmission electron microscopes\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The diffraction chapter has the following sections:\n",
-    "## Content\n",
-    "The Diffraction chapter has the following sections:\n",
-    "* [The Electron](CH2-Electron.ipynb)\n",
-    "* [Atomic Form Factor](Ch2-Atomic_Form_Factor.ipynb)\n",
-    "* [Basic Crystallography](Ch2-Basic_Crystallography.ipynb)\n",
-    "    * [Plot Unit Cell with Other Packages](Plot_UnitCell.ipynb)\n",
-    "    * [Fourier Transform Laboratory](FourierTransformLaboratory.ipynb)\n",
-    "* [Structure Factors](CH2-Structure_Factors.ipynb)\n",
-    "* [Analyzing Ring Diffraction Pattern](CH2-Diffraction-Rings.ipynb)\n",
-    "* [Kinematic Scattering Geometry](CH2-Kinematic_Scattering_Geometry.ipynb)\n",
-    "    * [Relrod - Sample Geometry and Excitation Error](CH2-Relrod.ipynb)\n",
-    "* [Plotting of Diffraction Pattern](CH2-Plotting_Diffraction_Pattern.ipynb)\n",
-    "* [Analyzing Spot Diffraction Pattern](CH2-Spot_Diffraction_Pattern.ipynb)\n",
-    "* [Kikuchi Lines](CH2-Kikuchi_Lines.ipynb)\n",
-    "* [HOLZ Lines](HOLZ_Lines.ipynb)\n",
-    "* [Lattice Determination with HOLZ](HOLZ_Example.ipynb) \n",
-    "* [Kinematic Diffraction with KinsCat](Kinematic_Diffraction_with_KinsCat.ipynb)\n",
-    "\n",
-    "# Introduction\n",
-    "\n",
     "## Basics\n",
     "\n",
     "- Diffraction is the direct result of the interaction (with or without\n",
     "energy transfer) of electrons and matter.\n",
     "- Kinematic diffraction theory describes only the Bragg angles (the position of the Bragg reflections) but not the intensity in a real\n",
     "diffraction pattern.\n",
-    "- Dynamic theory is responsible for the intensity variation of the Bragg reflections\n",
-    "\n",
+    "- Dynamic theory is responsible for the intensity variation of the Bragg reflections\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Diffraction and Imaging\n",
     "\n",
     "- To achieve an image from a diffraction pattern only a **Fourier Transformation** of parts of the diffraction pattern is needed.\n",
     "- Any image in a TEM can be described as **Fourier Filtering**, because we select the beams that form the images. The knowledge of which and how many diffracted beams contribute to the image formation is crucial.\n",
     "- Because the intensity of selected diffracted beams is necessary to calculate image intensities, dynamic diffraction theory is necessary.\n",
-    "- Understanding difraction theory of electrons is at the core of the analysis of TEM data.\n",
-    "\n",
-    "\n",
-    "According to Fourier-Optical view of the TEM we first form a diffraction pattern (in Fourier space) and after another (inverse) Fourier\n",
-    "Transformation of parts of this diffraction pattern we are back in real space and can observe an image.\n",
-    "\n",
-    "## Dynamic and Kinematic Theory\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "- Kinematic Theory is based on a single scattering event per electron\n",
-    "- Kinematic theory is used in neutron and X-ray diffraction almost exclusively.\n",
-    "\n",
-    "- Dynamic theory incorporates multi scattering events.\n",
-    "- Dynamic theory results in Rocking Curves of intensities of diffracted beams with sample thickness.\n",
-    "- Dynamic theory can analytically be solved only for the two beam case, strangely the basis for conventional TEM."
+    "- Understanding difraction theory of electrons is at the core of the analysis of TEM data.\n"
    ]
   },
   {
@@ -105,11 +75,68 @@
     "    <td>Wave picture</td>\n",
     "  </tr>\n",
     " \n",
+    "</table> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Interaction of Common Particles with Matter\n",
+    "\n",
+    "We generally use electron, photons, and neutrons for diffraction/scattering\n",
+    "experiments.\n",
+    "\n",
+    "These particles interact with differently with matter:\n",
+    "\n",
+    " <table style=\"width:80%\">\n",
+    " \n",
+    "  <tr>\n",
+    "    <td>X-rays</td>\n",
+    "    <td>$\\leftrightarrow$</td>\n",
+    "    <td>electron density</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>neutrons</td>\n",
+    "    <td>$\\leftrightarrow$</td>\n",
+    "    <td>mass of nucleus</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>neutrons</td>\n",
+    "    <td>$\\leftrightarrow$</td>\n",
+    "    <td>magnetic moment</td>\n",
+    "  </tr>\n",
+    "  <tr>\n",
+    "    <td>electrons</td>\n",
+    "    <td>$\\leftrightarrow$</td>\n",
+    "    <td>screened charge of nucleus</td>\n",
+    "  </tr>\n",
+    " \n",
     "</table> \n",
     "\n",
-    "We will switch back and forth between these two pictures, depending on which is mathematically easier to express.\n",
+    "We will deal with the nature of electrons more closely in [this notebook](CH2-Electron.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dynamic and Kinematic Theory\n",
+    "\n",
+    "- Kinematic Theory is based on a single scattering event per electron\n",
+    "- Kinematic theory is used in neutron and X-ray diffraction almost exclusively.\n",
     "\n",
     "\n",
+    "- Dynamic theory incorporates multi-scattering events.\n",
+    "- Dynamic theory results in **Rocking Curves** of intensities of difracted beams with sample thickness.\n",
+    "- Dynamic theory can analytically be solved only for the two beam case, strangely the basis for conventional TEM.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Kinematic Diffraction Theory Buzz Words\n",
     "\n",
     "The following terms will be important in Kinematic Theory:\n",
@@ -156,18 +183,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Navigation\n",
-    "- **[Back: Chapter 1: Introduction](CH1_00-Introduction.ipynb)**    \n",
-    "- **[Next: Chapter 3: Imaging](CH3_00-Imaging.ipynb)**    \n",
-    "- **[Front](_MSE672_Intro_TEM.ipynb)**\n"
+    "# Navigation\n",
+    "## Back: [Introduction](CH2-Introduction)\n",
+    "## Next: [Electron](CH2-Electron.ipynb)\n",
+    "## Chapter 2: [Diffraction](CH2_Diffraction.ipynb)\n",
+    "## List of Content: [Front](_Analysis_of_Scanning_Electron_Microscope_Data.ipynb)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -193,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.7.6"
   },
   "toc": {
    "base_numbering": 1,
@@ -204,7 +225,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "472.5px",
+    "left": "494px",
+    "top": "134.867px",
+    "width": "115.167px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
