--- a/docs/doctrees/nbsphinx/Introduction/TestNotebook.ipynb
+++ b/docs/doctrees/nbsphinx/Introduction/TestNotebook.ipynb
@@ -40,10 +40,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-01-22T20:11:15.728611Z",
-     "iopub.status.busy": "2021-01-22T20:11:15.727612Z",
-     "iopub.status.idle": "2021-01-22T20:11:16.525859Z",
-     "shell.execute_reply": "2021-01-22T20:11:16.526856Z"
+     "iopub.execute_input": "2021-01-25T22:39:38.243391Z",
+     "iopub.status.busy": "2021-01-25T22:39:38.241399Z",
+     "iopub.status.idle": "2021-01-25T22:39:38.996149Z",
+     "shell.execute_reply": "2021-01-25T22:39:38.997187Z"
     },
     "executionInfo": {
      "elapsed": 1026,
@@ -82,10 +82,10 @@
      "height": 267
     },
     "execution": {
-     "iopub.execute_input": "2021-01-22T20:11:16.585854Z",
-     "iopub.status.busy": "2021-01-22T20:11:16.584855Z",
-     "iopub.status.idle": "2021-01-22T20:11:16.887852Z",
-     "shell.execute_reply": "2021-01-22T20:11:16.886852Z"
+     "iopub.execute_input": "2021-01-25T22:39:39.051188Z",
+     "iopub.status.busy": "2021-01-25T22:39:39.050185Z",
+     "iopub.status.idle": "2021-01-25T22:39:39.328803Z",
+     "shell.execute_reply": "2021-01-25T22:39:39.327805Z"
     },
     "executionInfo": {
      "elapsed": 845,
@@ -140,7 +140,7 @@
     }
    },
    "source": [
-    "Who would have thought that the formula of love is based on trignometry?"
+    "Who would have thought that the formula of love is based on trigonometry?"
    ]
   },
   {
