Diffraction more notebooks

--- a/docs/Diffraction/Ch2_02-Atomic_Form_Factor.ipynb
+++ b/docs/Diffraction/Ch2_02-Atomic_Form_Factor.ipynb
@@ -54,10 +54,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-01-25T22:39:03.059011Z",
-     "iopub.status.busy": "2021-01-25T22:39:03.058012Z",
-     "iopub.status.idle": "2021-01-25T22:39:03.581284Z",
-     "shell.execute_reply": "2021-01-25T22:39:03.580256Z"
+     "iopub.execute_input": "2021-01-25T22:48:39.816418Z",
+     "iopub.status.busy": "2021-01-25T22:48:39.815414Z",
+     "iopub.status.idle": "2021-01-25T22:48:40.325732Z",
+     "shell.execute_reply": "2021-01-25T22:48:40.326729Z"
     }
    },
    "outputs": [
@@ -105,10 +105,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-01-25T22:39:03.588255Z",
-     "iopub.status.busy": "2021-01-25T22:39:03.587255Z",
-     "iopub.status.idle": "2021-01-25T22:39:05.163521Z",
-     "shell.execute_reply": "2021-01-25T22:39:05.162523Z"
+     "iopub.execute_input": "2021-01-25T22:48:40.333763Z",
+     "iopub.status.busy": "2021-01-25T22:48:40.332729Z",
+     "iopub.status.idle": "2021-01-25T22:48:41.924669Z",
+     "shell.execute_reply": "2021-01-25T22:48:41.924669Z"
     }
    },
    "outputs": [
@@ -148,10 +148,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-01-25T22:39:05.170522Z",
-     "iopub.status.busy": "2021-01-25T22:39:05.169522Z",
-     "iopub.status.idle": "2021-01-25T22:39:05.173528Z",
-     "shell.execute_reply": "2021-01-25T22:39:05.172532Z"
+     "iopub.execute_input": "2021-01-25T22:48:41.932669Z",
+     "iopub.status.busy": "2021-01-25T22:48:41.931670Z",
+     "iopub.status.idle": "2021-01-25T22:48:41.936699Z",
+     "shell.execute_reply": "2021-01-25T22:48:41.935669Z"
     },
     "slideshow": {
      "slide_type": "-"
@@ -199,10 +199,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-01-25T22:39:05.179521Z",
-     "iopub.status.busy": "2021-01-25T22:39:05.178536Z",
-     "iopub.status.idle": "2021-01-25T22:39:05.183561Z",
-     "shell.execute_reply": "2021-01-25T22:39:05.182521Z"
+     "iopub.execute_input": "2021-01-25T22:48:41.941670Z",
+     "iopub.status.busy": "2021-01-25T22:48:41.941670Z",
+     "iopub.status.idle": "2021-01-25T22:48:41.946668Z",
+     "shell.execute_reply": "2021-01-25T22:48:41.945669Z"
     }
    },
    "outputs": [
@@ -229,10 +229,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-01-25T22:39:05.194523Z",
-     "iopub.status.busy": "2021-01-25T22:39:05.193524Z",
-     "iopub.status.idle": "2021-01-25T22:39:06.830524Z",
-     "shell.execute_reply": "2021-01-25T22:39:06.831525Z"
+     "iopub.execute_input": "2021-01-25T22:48:41.958671Z",
+     "iopub.status.busy": "2021-01-25T22:48:41.957670Z",
+     "iopub.status.idle": "2021-01-25T22:48:43.617916Z",
+     "shell.execute_reply": "2021-01-25T22:48:43.616917Z"
     }
    },
    "outputs": [
@@ -1200,7 +1200,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='776804fe-5976-4935-abc7-80cee256abad'></div>"
+       "<div id='5b4c52aa-86f1-4e6b-bb29-ec0eab68f9c7'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1212,7 +1212,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1b86a32ac40>"
+       "<matplotlib.legend.Legend at 0x28c0655cca0>"
       ]
      },
      "execution_count": 1,
@@ -1302,10 +1302,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-01-25T22:39:06.837526Z",
-     "iopub.status.busy": "2021-01-25T22:39:06.836522Z",
-     "iopub.status.idle": "2021-01-25T22:39:08.823693Z",
-     "shell.execute_reply": "2021-01-25T22:39:08.822659Z"
+     "iopub.execute_input": "2021-01-25T22:48:43.624919Z",
+     "iopub.status.busy": "2021-01-25T22:48:43.623914Z",
+     "iopub.status.idle": "2021-01-25T22:48:45.567996Z",
+     "shell.execute_reply": "2021-01-25T22:48:45.566995Z"
     }
    },
    "outputs": [
@@ -2273,7 +2273,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='bff6873d-32f6-4761-a95b-c8a083a6e09e'></div>"
+       "<div id='5ff4e20e-414b-4b1f-bf8c-33f96934fa4a'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -2346,10 +2346,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-01-25T22:39:08.837660Z",
-     "iopub.status.busy": "2021-01-25T22:39:08.836660Z",
-     "iopub.status.idle": "2021-01-25T22:39:08.916700Z",
-     "shell.execute_reply": "2021-01-25T22:39:08.917700Z"
+     "iopub.execute_input": "2021-01-25T22:48:45.580998Z",
+     "iopub.status.busy": "2021-01-25T22:48:45.580998Z",
+     "iopub.status.idle": "2021-01-25T22:48:45.666178Z",
+     "shell.execute_reply": "2021-01-25T22:48:45.666178Z"
     },
     "scrolled": true
    },
@@ -3318,7 +3318,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='493ed876-fbbb-400e-be64-521f1e5756c3'></div>"
+       "<div id='3ea55a4c-2293-4197-9313-3ef518444850'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
