--- a/Diffraction/CH2_01-Electron.ipynb
+++ b/Diffraction/CH2_01-Electron.ipynb
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -234,22 +234,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The relativistically corrected wave length is 3.70 pm for acceleration voltage 10.0 kV\n"
+      "The relativistically corrected wave length is 2.51 pm for acceleration voltage 200.0 kV\n"
      ]
     }
    ],
    "source": [
     "# Input: Acceleration Voltage\n",
-    "E0 = acceleration_voltage = 10.0 *1000.0 #V\n",
+    "E0 = acceleration_voltage = 200.0 *1000.0 #V\n",
     "\n",
-    "E_kin = eV = const.e * acceleration_voltage_V #potential\n",
+    "E_kin = eV = const.e * acceleration_voltage #potential\n",
     "\n",
     "#relativisitic wavelength\n",
     "wave_length = const.h/np.sqrt(2*const.m_e*E_kin*(1+E_kin/(2*const.m_e*const.c**2))) #in m\n",
@@ -277,7 +277,7 @@
     "\n",
     "The same functionality (and code) is used in the KinsCat Library and we can test the values of above table.\n",
     "\n",
-    "Please change the acceleration voltage (**acceleration_voltage_V**) below.\n"
+    "Please change the acceleration voltage (**acceleration_voltage**) above.\n"
    ]
   },
   {
@@ -292,15 +292,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The classic velocity of the electron  is 187553726.21 m/s or 62.56% of the speed of light\n",
-      "The relativistic velocity of the electron  is 164352479.73 m/s or 54.82% of the speed of light\n"
+      "The classic velocity of the electron  is 265241023.28 m/s or 88.47% of the speed of light\n",
+      "The relativistic velocity of the electron  is 208450034.42 m/s or 69.53% of the speed of light\n"
      ]
     }
    ],
@@ -320,15 +320,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Using KinsCat library version  0.5  by G.Duscher\n",
-      "spglib not installed; Symmetry functions of spglib disabled\n",
       "The relativistically corrected wave length is 6.98 pm for acceleration voltage 30.0 kV\n"
      ]
     }
@@ -360,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +837,7 @@
       "\n",
       " 1pA is 6.24e+06 electrons/s\n",
       " 10pA is 62415 electrons/ms\n",
-      "100pA is 0.624 electrons/ns\n",
+      "100pA is 6.24e+08 electrons/s\n",
       "\n",
       " at 10pA an electron will hit the sample every 16.02 ns \n"
      ]
@@ -849,7 +847,7 @@
     "print(f\" elementary charge: {const.physical_constants['elementary charge'][0]:.5g} {const.physical_constants['elementary charge'][1]}\")\n",
     "print(f'\\n 1pA is {1e-12/const.e:.3} electrons/s')\n",
     "print(f' 10pA is {10e-12/const.e *1e-3 :.0f} electrons/ms')\n",
-    "print(f'100pA is {100e-12/const.e*1 *1e-9:.3} electrons/ns')\n",
+    "print(f'100pA is {100e-12/const.e*1 :.3} electrons/s')\n",
     "\n",
     "print(f'\\n at 10pA an electron will hit the sample every {const.e/10e-12 * 1e9:.2f} ns ')\n"
    ]
